[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "click-tools"
version = "0.0.0"
description = ""
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
homepage = "https://github.com/d-chris/click-tools.git"
packages = [ { include = "clickx" } ]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.1.8"
click-validators = { version = ">=0.2.1", optional = true }
pillow = { version = ">=11.3.0", optional = true }

[tool.poetry.scripts]
clickx = "clickx.__main__:cli"

[tool.poetry.extras]
all = [ "click-validators", "pillow" ]
validators = [ "click-validators" ]
pillow = [ "pillow" ]
